--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,70 @@
 
 body{
-    background-color: rgb(200, 200, 200);
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container{
-    border: 2px solid black;
+    border: 1px solid black;
 }
 
 .row{
-    border: 2px solid red;
+    border: 1px solid black;
 }
 
 .col{
-    border: 2px solid cyan;
+    border: 1px solid greenyellow;
+    
+}
+
+.lg-nav .row:nth-child(0), .mobile-nav{
+    background-color: red;
+    color: white;
+}
+
+
+.nav-tabs{
+    color: black;
+    background-color: white;
+}
+
+.nav-tabs .row{
+    border-bottom: 1px solid rgb(200, 200, 200);
+    text-align: center;
+    background-color: white;
+    align-items: center;
+}
+
+.nav-tabs .row:nth-child(1) .col::before{
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 40%;
+    bottom: 30%;
+    left: 0;
+    border-left: 1px solid grey;
+}
+
+.nav-tabs .row:nth-child(1) .col:nth-child(1){
+    border: none;
+}
+
+.nav-tabs .row:nth-child(1) .col:nth-child(12){
+    border: none;
+}
+
+.nav-tabs .col{
+    padding: 0;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 13px;
+}
+
+.nav-tabs .col:hover{
+    color: red;
+}
+
+.nav-tabs .row:nth-child(2){
+    color: grey;
 }
 
